<?xml version="1.0"?>
<package format="2">
  <name>sgtdv_msgs</name>
  <version>0.0.0</version>
  <description>The sgtdv_msgs package</description>

  <maintainer email="patrik.knaperek@sgteam.eu">Patrik Knaperek</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
</package>
